Fixed gap between slider and nav bar

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
 		<!-- JSSOR Full Width Slider -->
 		<div id="slider1_container" style="position: relative; margin: 0 auto;
-		top: 100px; left: 0px; width: 1920px; height: 450px; overflow: hidden;">
+		top: 89px; left: 0px; width: 1920px; height: 450px; overflow: hidden;">
 
 			<!-- SLider Loading Screen -->
 			<div data-u="loading" style="position: absolute; top: 0px; left: 0px;">
@@ -276,12 +276,12 @@
 					<div class="col-md-1">
 						<img src="images/quote.png" alt="icon" />
 					</div>
-					<div class="col-md-7 tweet_txt" >
+					<div class="col-md-7 test_txt" >
 						<span>Doug Kennelly has consistently provided outstanding audio visual equipment
 							and production services at conferences and conventions for me over
 							the past 15 years. The latest event was the 2014 ConveyUX conference at the Olive 8 in Seattle. Partnering with Doug insures reliable and consstent service.</span>
 						<br/>
-						<span class="twitter_user">Joe @ BlinkUX</span>
+						<span class="testify">Joe @ BlinkUX</span>
 					</div>
 				</div>
 			</div>
@@ -822,7 +822,7 @@
 					<div class="line-header">
 						<div class="text-center">
 							<hr class="savs_hr savs_hr_left hr_gray"/>
-							<span class="txt_darkgrey">EVENT GALLERY</span>
+							<span class="txt_darkgrey">EVENTS GALLERY</span>
 							<hr class="savs_hr savs_hr_right hr_gray" />
 						</div>
 					</div>
@@ -947,20 +947,19 @@
 
 		</div><!-- End Gallery -->
 
-		<div class="clearfix"></div>
-
 		<!-- Contact -->
 		<div id="contact">
 			<div class="container">
 				<div class="row">
-					<div class="line-header" style="margin-bottom: 100px">
+					<div class="line-header">
 						<div class="text-center">
 							<hr class="savs_hr savs_hr_left hr_gray"/>
-							<span class="txt_darkgrey">CONTACT US</span>
+							<span class="txt_darkgrey">CONTACT</span>
 							<hr class="savs_hr savs_hr_right hr_gray"/>
 						</div>
 					</div>
-
+				</div>
+				<div class="space">
 					<div class="col-md-8">
 						<div class="contact-map" id="map-canvas"></div>
 						<div class="clearfix"></div>
