--- a/index.html
+++ b/index.html
@@ -231,7 +231,6 @@
 
 										<div class="col-md-3 col-sm-3">
 											<div class="service-item">
-												<span class="service-icon second"></span>
 												<a href="#lighting"><h2>Lighting</h2></a>
 												<p>
 													We create some awesome environments. Whether you need ambient back lighting for an auction or stage lighting for a concert, we have the design skills, equipment and manpower to expertly serve your needs.
@@ -241,7 +240,6 @@
 
 										<div class="col-md-3 col-sm-3">
 											<div class="service-item">
-												<span class="service-icon third"></span>
 												<a href="#audio"><h2>Audio</h2></a>
 												<p>
 													We have a full line of custom professional pro-aodio reinforcement solutions from small public address systems to full size sound systems for auctions, concerts, conferences and conventions.
@@ -251,7 +249,6 @@
 
 										<div class="col-md-3 col-sm-3">
 											<div class="service-item">
-												<span class="service-icon fourth"></span>
 												<a href="#staging"><h2>Staging / Drapery</h2></a>
 												<p>
 													We have staging, drapery and pipe (stands) to make your event look clean, polished and professional. Dress up your auction tables with lighting and drapery for an unforgettable look and feel.
@@ -267,9 +264,20 @@
 			</div>
 		</div>
 		<!-- End Services -->
+		<div id="testimonials" class="container">
+			<div class="row">
+				<div class="line-header" style="margin-top: 0px;" >
+					<div class="text-center">
+						<hr class="savs_hr savs_hr_left hr_gray"/>
+						<span class="span_rentals_sales txt_darkgrey">TESTIMONIALS</span>
+						<hr class="savs_hr savs_hr_right hr_gray" />
+					</div>
+				</div>
 
+			</div>
+		</div>
 		<!-- Testimonial -->
-		<div id="testimonials" class="testimonials">
+		<div class="testimonials">
 			<div class="container">
 				<div class="row" style="margin-top:20px;">
 					<div class="col-md-2"></div>
@@ -406,11 +414,10 @@
 				</div>
 				<div class="text-center">
 					<div class="service-item-header">
-						Seattle AV Services has a wide variety a Data-Video Projectors to select from. Below provides you with a few Projector examples to make your decision easier.
-					</div>
+						Seattle AV Services has a wide variety a Data-Video Projectors to select from. Float over the images then click. </div>
 				</div>
 				<ul class="project-gallery" >
-					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-graphic" >
+					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-projectors" >
 						<a class="colorbox" href="images/p1f.jpg" data-group="projectors">
 						<div class="project-box">
 							<img src="images/p1f.jpg" class="img-responsive" alt="gallery" />
@@ -424,7 +431,7 @@
 							20000 ANSI Lumens
 						</p>
 					</li>
-					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-creative" >
+					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-projectors" >
 						<a class="colorbox" href="images/p2f.jpg" data-group="projectors">
 						<div class="project-box">
 							<img src="images/p2f.jpg" class="img-responsive" alt="gallery" />
@@ -438,7 +445,7 @@
 							10000 ANSI Lumens
 						</p>
 					</li>
-					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-inspiration" >
+					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-projectors" >
 						<a class="colorbox" href="images/p3f.jpg" data-group="projectors">
 						<div class="project-box">
 							<img src="images/p3f.jpg" class="img-responsive" alt="gallery" />
@@ -452,7 +459,7 @@
 							8000 ANSI Lumens
 						</p>
 					</li>
-					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-design" >
+					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-projectors" >
 						<a class="colorbox" href="images/p5f.jpg" data-group="projectors">
 						<div class="project-box">
 							<img src="images/p5f.jpg" class="img-responsive" alt="gallery" />
@@ -466,7 +473,7 @@
 							5000 ANSI Lumens
 						</p>
 					</li>
-					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-inspiration" >
+					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-projectors" >
 						<a class="colorbox" href="images/p4f.jpg" data-group="projectors">
 						<div class="project-box">
 							<img src="images/p4f.jpg" class="img-responsive" alt="gallery" />
@@ -505,7 +512,7 @@
 					</div>
 				</div>
 				<ul class="project-gallery" >
-					<li class="col-lg-2 col-md-2 col-sm-2  gallery">
+					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-lighting">
 						<a class="colorbox" href="images/pr6.jpg" data-group="lighting">
 						<div class="project-box">
 							<img src="images/pr6.jpg" class="img-responsive" alt="gallery" />
@@ -514,14 +521,14 @@
 								<hr />
 								<h4>WITH CONTROLLERS</h4>
 							</div>
-						</div></a>
-						<div>
+						</div> </a>
+						<p>
 							Par 64's, Bars & Controllers
-						</div>
+						</p>
 					</li>
-					<li class="col-lg-2 col-md-2 col-sm-2  gallery" >
+					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-lighting">
 						<a class="colorbox" href="images/pr5.jpg" data-group="lighting">
-						<div class="project-box">
+							<div class="project-box">
 							<img src="images/pr5.jpg" class="img-responsive" alt="gallery" />
 							<div class="project-overlay">
 								<h5>LED PARS</h5>
@@ -529,11 +536,11 @@
 								<h4>ALL SIZES AND COLORS</h4>
 							</div>
 						</div> </a>
-						<div class="clearfix">
+						<p>
 							Hanging LED Par 36
-						</div>
+						</p>
 					</li>
-					<li class="col-lg-2 col-md-2 col-sm-2  gallery" >
+					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-lighting">
 						<a class="colorbox" href="images/pr3.jpg" data-group="lighting">
 						<div class="project-box">
 							<img src="images/pr3.jpg" class="img-responsive" alt="gallery"/>
@@ -543,11 +550,11 @@
 								<h4>ALL COLORS AND SIZES</h4>
 							</div>
 						</div> </a>
-						<div>
+						<p>
 							Floor standing Par 36 up light
-						</div>
+						</p>
 					</li>
-					<li class="col-lg-2 col-md-2 col-sm-2  gallery">
+					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-lighting">
 						<a class="colorbox" href="images/pr2.png" data-group="lighting">
 						<div class="project-box">
 							<img src="images/pr2.png" class="img-responsive" alt="gallery"/>
@@ -557,11 +564,11 @@
 								<h4>LIGHTS</h4>
 							</div>
 						</div> </a>
-						<div>
+						<p>
 							Customized packages
-						</div>
+						</p>
 					</li>
-					<li class="col-lg-2 col-md-2 col-sm-2  gallery">
+					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-lighting">
 						<a class="colorbox" href="images/pr1.jpg" data-group="lighting">
 						<div class="project-box">
 							<img src="images/pr1.jpg" class="img-responsive" alt="gallery"/>
@@ -571,13 +578,12 @@
 								<h4>PROJECTION LIGHTS</h4>
 							</div>
 						</div> </a>
-						<div>
+						<p>
 							GOBO Light Projection
-						</div>
+						</p>
 					</li>
 				</ul>
 			</div>
-
 		</div><!-- End Lighting Gallery -->
 
 		<!-- Begin Video Gallery -->
@@ -591,12 +597,13 @@
 							<hr class="savs_hr savs_hr_right hr_gray" />
 						</div>
 					</div>
-					<br class="clearfix"/>
 				</div>
-
+				<div class="text-center">
+					<div class=service-item-header>Seattle AV Services has video monitors for: walls, floor displays, table tops and rack mounts.</div>
+				</div>
 				<ul class="project-gallery" >
 
-					<li class="col-lg-2 col-md-2 col-sm-2  gallery" >
+					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-video" >
 						<a class="colorbox" href="images/vi7.jpg">
 						<div class="project-box">
 							<img src="images/vi3t.jpg" class="img-responsive" alt="gallery" />
@@ -608,7 +615,7 @@
 						</div> </a>
 					</li>
 
-					<li class="col-lg-2 col-md-2 col-sm-2  gallery" >
+					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-video" >
 						<a class="colorbox" href="images/vi6.jpg">
 						<div class="project-box">
 							<img src="images/v6t.jpg" class="img-responsive" alt="gallery" />
@@ -620,7 +627,7 @@
 						</div> </a>
 					</li>
 
-					<li class="col-lg-2 col-md-2 col-sm-2  gallery" >
+					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-video" >
 						<a class="colorbox" href="images/vi2.jpg">
 						<div class="project-box">
 							<img src="images/v2t.jpg" class="img-responsive" alt="gallery" />
@@ -631,7 +638,7 @@
 							</div>
 						</div> </a>
 					</li>
-					<li class="col-lg-2 col-md-2 col-sm-2  gallery" >
+					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-video" >
 						<a class="colorbox" href="images/vi1.jpg">
 						<div class="project-box">
 							<img src="images/vi1t.jpg" class="img-responsive" alt="gallery" />
@@ -642,7 +649,7 @@
 							</div>
 						</div> </a>
 					</li>
-					<li class="col-lg-2 col-md-2 col-sm-2  gallery" >
+					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-video" >
 						<a class="colorbox" href="images/vi4.jpg">
 						<div class="project-box">
 							<img src="images/vi2t.jpg" class="img-responsive" alt="gallery" />
@@ -671,11 +678,11 @@
 							<hr class="savs_hr savs_hr_right hr_gray" />
 						</div>
 					</div>
-					<br class="clearfix"/>
 				</div>
-
+				<div class="text-center">
+					<div class=service-item-header>Professional sound reinforcement: small rooms, stages, conventions, auctions, concerts</div>
 				<ul class="project-gallery" >
-					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-graphic" >
+					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-sound" >
 						<a class="colorbox" href="images/Dummy.jpg">
 						<div class="project-box">
 							<img src="images/Dummy.jpg" class="img-responsive" alt="gallery" />
@@ -686,7 +693,7 @@
 							</div>
 						</div> </a>
 					</li>
-					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-creative" >
+					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-sound" >
 						<a class="colorbox" href="images/Dummy.jpg">
 						<div class="project-box">
 							<img src="images/Dummy.jpg" class="img-responsive" alt="gallery" />
@@ -697,7 +704,7 @@
 							</div>
 						</div> </a>
 					</li>
-					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-inspiration" >
+					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-sound" >
 						<a class="colorbox" href="images/Dummy.jpg">
 						<div class="project-box">
 							<img src="images/Dummy.jpg" class="img-responsive" alt="gallery" />
@@ -711,7 +718,7 @@
 							</div>
 						</div> </a>
 					</li>
-					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-design" >
+					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-sound" >
 						<a class="colorbox" href="images/Dummy.jpg">
 						<div class="project-box">
 							<img src="images/Dummy.jpg" class="img-responsive" alt="gallery" />
@@ -722,7 +729,7 @@
 							</div>
 						</div> </a>
 					</li>
-					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-inspiration" >
+					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-sound" >
 						<a class="colorbox" href="images/Dummy.jpeg">
 						<div class="project-box">
 							<img src="images/Dummy.jpg" class="img-responsive" alt="gallery" />
@@ -750,9 +757,12 @@
 						</div>
 					</div>
 				</div>
-
+				
+				<div class="text-center">
+					<div class=service-item-header>Pipes, Drapes, Staging and Booths</div>
+				
 				<ul class="project-gallery" >
-					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-graphic" >
+					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-stage" >
 						<a class="colorbox" href="images/Dummy.jpg">
 						<div class="project-box">
 							<img src="images/Dummy.jpg" class="img-responsive" alt="gallery" />
@@ -763,7 +773,7 @@
 							</div>
 						</div> </a>
 					</li>
-					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-creative" >
+					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-stage" >
 						<a class="colorbox" href="images/Dummy.jpg">
 						<div class="project-box">
 							<img src="images/Dummy.jpg" class="img-responsive" alt="gallery" />
@@ -774,7 +784,7 @@
 							</div>
 						</div> </a>
 					</li>
-					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-inspiration" >
+					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-stage" >
 						<a class="colorbox" href="images/Dummy.jpg">
 						<div class="project-box">
 							<img src="images/Dummy.jpg" class="img-responsive" alt="gallery" />
@@ -788,7 +798,7 @@
 							</div>
 						</div> </a>
 					</li>
-					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-design" >
+					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-stage" >
 						<a class="colorbox" href="images/Dummy.jpg">
 						<div class="project-box">
 							<img src="images/Dummy.jpg" class="img-responsive" alt="gallery" />
@@ -799,7 +809,7 @@
 							</div>
 						</div> </a>
 					</li>
-					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-inspiration" >
+					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-stage" >
 						<a class="colorbox" href="images/Dummy.jpeg">
 						<div class="project-box">
 							<img src="images/Dummy.jpg" class="img-responsive" alt="gallery" />
@@ -827,6 +837,8 @@
 						</div>
 					</div>
 				</div>
+				<div class="text-center">
+					<div class=service-item-header>Look through our gallery of past events. Float over the images for information, then click to enlarge.</div>
 				<ul class="project-gallery" >
 					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-graphic" >
 						<a class="colorbox" href="images/av0.jpg">
@@ -938,7 +950,7 @@
 							<div class="project-overlay">
 								<h5>SPANDEX SCNEENS</h5>
 								<hr />
-								<h4>STAGE, TRUSS AND LIGHTING</h4>
+								<h4>TRUSSING, SCREEN AND GOBO</h4>
 							</div>
 						</div> </a>
 					</li>
