#href issue corrected

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 		<div id="rentals_sales">
 			<div class="container">
 				<div class="row">
-					<div class="line-header" style="margin-top: 30px;" >
+					<div class="line-header">
 						<div class="text-center">
 							<hr class="savs_hr savs_hr_left hr_gray"/>
 							<span class="span_rentals_sales txt_darkgrey">RENTALS / SALES</span>
