Audio Images and Captions

--- a/index.html
+++ b/index.html
@@ -683,60 +683,57 @@
 					<div class=service-item-header>Professional sound reinforcement: small rooms, stages, conventions, auctions, concerts</div>
 				<ul class="project-gallery" >
 					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-sound" >
-						<a class="colorbox" href="images/Dummy.jpg">
+						<a class="colorbox" href="images/s5.jpg">
 						<div class="project-box">
-							<img src="images/Dummy.jpg" class="img-responsive" alt="gallery" />
+							<img src="images/s5t.jpg" class="img-responsive" alt="gallery" />
 							<div class="project-overlay">
-								<h5>IMAGE</h5>
+								<h5>CONCERT</h5>
 								<hr />
-								<h4>PLACE HOLDER</h4>
+								<h4>SOUND BOARDS</h4>
 							</div>
 						</div> </a>
 					</li>
 					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-sound" >
-						<a class="colorbox" href="images/Dummy.jpg">
+						<a class="colorbox" href="images/s4.jpg">
 						<div class="project-box">
-							<img src="images/Dummy.jpg" class="img-responsive" alt="gallery" />
+							<img src="images/st4.jpg" class="img-responsive" alt="gallery" />
 							<div class="project-overlay">
-								<h5>IMAGE</h5>
+								<h5>SMALL DANCE / RAVE</h5>
 								<hr />
-								<h4>PLACE HOLDER</h4>
+								<h4>SOUND SYSTEM</h4>
 							</div>
 						</div> </a>
 					</li>
 					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-sound" >
-						<a class="colorbox" href="images/Dummy.jpg">
+						<a class="colorbox" href="images/s1.jpg">
 						<div class="project-box">
-							<img src="images/Dummy.jpg" class="img-responsive" alt="gallery" />
+							<img src="images/s1t.jpg" class="img-responsive" alt="gallery" />
 							<div class="project-overlay">
-								<h5>IMAGE</h5>
+								<h5>SMALL ROOM</h5>
 								<hr />
-								<h4>PLACE HOLDER</h4>
-							</div>
-							<div class="text-center">
-								Ultra short throw projector
+								<h4>PA SYSTEM</h4>
 							</div>
 						</div> </a>
 					</li>
 					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-sound" >
-						<a class="colorbox" href="images/Dummy.jpg">
+						<a class="colorbox" href="images/s3.jpg">
 						<div class="project-box">
-							<img src="images/Dummy.jpg" class="img-responsive" alt="gallery" />
+							<img src="images/st3.jpg" class="img-responsive" alt="gallery" />
 							<div class="project-overlay">
-								<h5>IMAGE</h5>
+								<h5>LIVE STAGE</h5>
 								<hr />
-								<h4>PLACE HOLDER</h4>
+								<h4>SOUND SYSTEM</h4>
 							</div>
 						</div> </a>
 					</li>
 					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-sound" >
-						<a class="colorbox" href="images/Dummy.jpeg">
+						<a class="colorbox" href="images/s6.jpg">
 						<div class="project-box">
-							<img src="images/Dummy.jpg" class="img-responsive" alt="gallery" />
+							<img src="images/st6.jpg" class="img-responsive" alt="gallery" />
 							<div class="project-overlay">
-								<h5>IMAGE</h5>
+								<h5>MOBILE RECORDING</h5>
 								<hr />
-								<h4>PLACE HOLDER</h4>
+								<h4>EDITING WORKSTATION</h4>
 							</div>
 						</div> </a>
 					</li>
