Updated events gallery overlay text descriptions

--- a/index.html
+++ b/index.html
@@ -851,9 +851,9 @@
 									<div class="project-box">
 										<img src="images/avt0.jpg" class="img-responsive" alt="gallery" />
 										<div class="project-overlay">
-											<h5>NEW HORIZONS</h5>
+											<h5>CONFERENCE / CONVENTION</h5>
 											<hr />
-											<h4>VIDEO SHOW</h4>
+											<h4>SOFTWARE SYSTEMS</h4>
 										</div>
 									</div> </a>
 								</li>
@@ -862,9 +862,9 @@
 									<div class="project-box">
 										<img src="images/avt1.jpg" class="img-responsive" alt="gallery" />
 										<div class="project-overlay">
-											<h5>CORPORATE</h5>
+											<h5>PRESENTATION</h5>
 											<hr />
-											<h4>PRODUCT RELEASE</h4>
+											<h4>SALES</h4>
 										</div>
 									</div> </a>
 								</li>
@@ -873,9 +873,9 @@
 									<div class="project-box">
 										<img src="images/avt2.jpg" class="img-responsive" alt="gallery" />
 										<div class="project-overlay">
-											<h5>SCHOOL</h5>
+											<h5>SCHOOL AUCTION</h5>
 											<hr />
-											<h4>AUCTION</h4>
+											<h4>FUNDRAISER</h4>
 										</div>
 									</div> </a>
 								</li>
@@ -884,7 +884,7 @@
 									<div class="project-box">
 										<img src="images/avt3.jpg" class="img-responsive" alt="gallery" />
 										<div class="project-overlay">
-											<h5>ACADEMIA</h5>
+											<h5>EDUCATIONAL INSTITUTION</h5>
 											<hr />
 											<h4>PLENARY SPEAKER</h4>
 										</div>
@@ -895,9 +895,9 @@
 									<div class="project-box">
 										<img src="images/avt4.jpg" class="img-responsive" alt="gallery" />
 										<div class="project-overlay">
-											<h5>KEYNOTE SPEAKER</h5>
+											<h5>BUSINESS LUNCHEON</h5>
 											<hr />
-											<h4>LUNCHEON</h4>
+											<h4>KEYNOTE SPEAKER</h4>
 										</div>
 									</div> </a>
 								</li>
@@ -906,9 +906,9 @@
 									<div class="project-box">
 										<img src="images/avt5.jpg" class="img-responsive" alt="gallery" />
 										<div class="project-overlay">
-											<h5>BANQUET</h5>
+											<h5>CONVENTION</h5>
 											<hr />
-											<h4>AUCTION</h4>
+											<h4>BUSINESS LUNCH</h4>
 										</div>
 									</div> </a>
 								</li>
@@ -920,7 +920,7 @@
 										<div class="project-overlay">
 											<h5>POLITICAL SPEECH</h5>
 											<hr />
-											<h4>SPAIN</h4>
+											<h4>COMMUNITY FORUM</h4>
 										</div>
 									</div> </a>
 								</li>
@@ -932,7 +932,7 @@
 										<div class="project-overlay">
 											<h5>HOTEL BANQUET</h5>
 											<hr />
-											<h4>STAGE, SCREENS, LIGHITNG</h4>
+											<h4>BUSINESS LUNCH</h4>
 										</div>
 									</div> </a>
 								</li>
