Staging / Drapery Images, Text and Copy

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 													in business for himself April 15th, 1980 and throughout the years, Doug Kennelly
 													has worked with many business owners and the idea of creating this co-operative
 													was established to provide our clients with the best in Services, Equipment
-													and discounted AV Rental Pricing.
+													and discounted AV Rental Pricing. Think of Seattle AV Services as your event design and production partners.
 												</p>
 											</div>
 										</div>
@@ -222,7 +222,7 @@
 
 										<div class="col-md-3 col-sm-3">
 											<div class="service-item">
-												<a href="#projectors"><h2>Data Projection</h2></a>
+												<a href="#projectors"><h2>Projectors / Video</h2></a>
 												<p>
 													Have data projection requirements? SeattleAVS has you covered. From short throw at the end of a conference table to scaffolding mounted projection for a convention with 500 people, we have the projectors, screens, cables, connectivity and knowledgable technicians to do the job right the first time.
 												</p>
@@ -377,24 +377,64 @@
 					<div class="col-sm-5 col-md-6 rentals_sales_post">
 						<ul class="list-inline">
 							<li class="col-md-4">
-								<a href="#staging"> <img class="img-responsive" src="images/127.png"  alt="gallery 4" /> </a>
+								<a href="#audio"> <img class="img-responsive" src="images/sound.jpg" alt="gallery 3" /></a>
 							</li>
 							<li class="col-md-8">
 								<div class="pull-left">
-									<span class="rentals_sales_header">STAGING / DRAPERY</span>
+									<span class="rentals_sales_header">AUDIO</span>
+									<br/>
+								</div>
+								<div class="pull-right">
+									<a class="btn btn-orange" href="#audio" role="button">INFORMATION</a>
+								</div>
+								<div class="clearfix"></div>
+								<p class="rentals_sales_text">
+									From keynote speakers to mobile disco sound systems to full concert productions, we will blow the roof off of your next event.
+								</p>
+							</li>
+						</ul>
+					</div><!-- End Renta;ls Sales Post 4 -->
+
+					<div class="col-sm-5 col-md-6 rentals_sales_post">
+						<ul class="list-inline">
+							<li class="col-md-4">
+								<a href="#video"> <img class="img-responsive" src="images/127.png" alt="gallery 3" /></a>
+							</li>
+							<li class="col-md-8">
+								<div class="pull-left">
+									<span class="rentals_sales_header">STAGING</span>
+									<br/>
+								</div>
+								<div class="pull-right">
+									<a class="btn btn-orange" href="#video" role="button">INFORMATION</a>
+								</div>
+								<div class="clearfix"></div>
+								<p class="rentals_sales_text">
+									We have staging and decking in all shapes and sizs. We build custom staging and steel floor decks to your specifications.
+								</p>
+							</li>
+						</ul>
+					</div><!-- End Renta;ls Sales Post 5 -->
+
+					<div class="col-sm-5 col-md-6 rentals_sales_post">
+						<ul class="list-inline">
+							<li class="col-md-4">
+								<a href="#staging"> <img class="img-responsive" src="images/drape.jpg" alt="gallery 3" /></a>
+							</li>
+							<li class="col-md-8">
+								<div class="pull-left">
+									<span class="rentals_sales_header">DRAPERY</span>
 									<br/>
 								</div>
 								<div class="pull-right">
 									<a class="btn btn-orange" href="#staging" role="button">INFORMATION</a>
 								</div>
-
-								<p class="rentals_sales_text">
-									Shakespeare would roll over in his grave if he knew what we were up to in the realms of staging and drapery. We have steel decking big enough for Metallica and enough pipes and drapes to make a booth for every gamer at the next Uber Dark Lord of the Games Game-a-Thon.
-								</p>
+								<div class="clearfix"></div>
+								<p class="rentals_sales_text">We have drapes, pipes, tables, booths in just about any configuration conceivable. From sinple stage drapes to your next comic-con, we'll keep you in shrouds.</p>
 							</li>
 						</ul>
-					</div>
-					<!-- End Rental Sales Post 4 -->
+					</div><!-- End Rentals Sales Post 6 -->
+
 				</div>
 			</div>
 		</div>
@@ -607,7 +647,7 @@
 				<ul class="project-gallery" >
 
 					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-video" >
-						<a class="colorbox" href="images/vi7.jpg">
+						<a class="colorbox" href="images/vi7.jpg" data-group="video-screens">
 						<div class="project-box">
 							<img src="images/vi3t.jpg" class="img-responsive" alt="gallery" />
 							<div class="project-overlay">
@@ -619,7 +659,7 @@
 					</li>
 
 					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-video" >
-						<a class="colorbox" href="images/vi6.jpg">
+						<a class="colorbox" href="images/vi6.jpg" data-group="video-screens">
 						<div class="project-box">
 							<img src="images/v6t.jpg" class="img-responsive" alt="gallery" />
 							<div class="project-overlay">
@@ -631,7 +671,7 @@
 					</li>
 
 					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-video" >
-						<a class="colorbox" href="images/vi2.jpg">
+						<a class="colorbox" href="images/vi2.jpg" data-group="video-screens">
 						<div class="project-box">
 							<img src="images/v2t.jpg" class="img-responsive" alt="gallery" />
 							<div class="project-overlay">
@@ -642,7 +682,7 @@
 						</div> </a>
 					</li>
 					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-video" >
-						<a class="colorbox" href="images/vi1.jpg">
+						<a class="colorbox" href="images/vi1.jpg" data-group="video-screens">
 						<div class="project-box">
 							<img src="images/vi1t.jpg" class="img-responsive" alt="gallery" />
 							<div class="project-overlay">
@@ -653,7 +693,7 @@
 						</div> </a>
 					</li>
 					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-video" >
-						<a class="colorbox" href="images/vi4.jpg">
+						<a class="colorbox" href="images/vi4.jpg" data-group="video-screens">
 						<div class="project-box">
 							<img src="images/vi2t.jpg" class="img-responsive" alt="gallery" />
 							<div class="project-overlay">
@@ -688,7 +728,7 @@
 					</div>
 					<ul class="project-gallery" >
 						<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-sound" >
-							<a class="colorbox" href="images/s5.jpg">
+							<a class="colorbox" href="images/s5.jpg" data-group="sound">
 							<div class="project-box">
 								<img src="images/s5t.jpg" class="img-responsive" alt="gallery" />
 								<div class="project-overlay">
@@ -699,7 +739,7 @@
 							</div> </a>
 						</li>
 						<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-sound" >
-							<a class="colorbox" href="images/s4.jpg">
+							<a class="colorbox" href="images/s4.jpg" data-group="sound">
 							<div class="project-box">
 								<img src="images/st4.jpg" class="img-responsive" alt="gallery" />
 								<div class="project-overlay">
@@ -710,7 +750,7 @@
 							</div> </a>
 						</li>
 						<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-sound" >
-							<a class="colorbox" href="images/s1.jpg">
+							<a class="colorbox" href="images/s1.jpg" data-group="sound">
 							<div class="project-box">
 								<img src="images/s1t.jpg" class="img-responsive" alt="gallery" />
 								<div class="project-overlay">
@@ -721,7 +761,7 @@
 							</div> </a>
 						</li>
 						<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-sound" >
-							<a class="colorbox" href="images/s3.jpg">
+							<a class="colorbox" href="images/s3.jpg" data-group="sound">
 							<div class="project-box">
 								<img src="images/st3.jpg" class="img-responsive" alt="gallery" />
 								<div class="project-overlay">
@@ -732,7 +772,7 @@
 							</div> </a>
 						</li>
 						<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-sound" >
-							<a class="colorbox" href="images/s6.jpg">
+							<a class="colorbox" href="images/s6.jpg" data-group="sound">
 							<div class="project-box">
 								<img src="images/st6.jpg" class="img-responsive" alt="gallery" />
 								<div class="project-overlay">
@@ -767,60 +807,57 @@
 
 						<ul class="project-gallery" >
 							<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-stage" >
-								<a class="colorbox" href="images/Dummy.jpg">
+								<a class="colorbox" href="images/dp7.jpg" data-group="stage">
 								<div class="project-box">
-									<img src="images/Dummy.jpg" class="img-responsive" alt="gallery" />
+									<img src="images/dp7t.jpg" class="img-responsive" alt="gallery" />
 									<div class="project-overlay">
-										<h5>IMAGE</h5>
+										<h5>3D RENDERING</h5>
 										<hr />
-										<h4>PLACE HOLDER</h4>
+										<h4>STAGE / EVENT DESIGN</h4>
 									</div>
 								</div> </a>
 							</li>
 							<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-stage" >
-								<a class="colorbox" href="images/Dummy.jpg">
+								<a class="colorbox" href="images/dp3.jpg" data-group="stage">
 								<div class="project-box">
-									<img src="images/Dummy.jpg" class="img-responsive" alt="gallery" />
+									<img src="images/dp3t.jpg" class="img-responsive" alt="gallery" />
 									<div class="project-overlay">
-										<h5>IMAGE</h5>
+										<h5>STAGING / PLATFORMS</h5>
 										<hr />
-										<h4>PLACE HOLDER</h4>
+										<h4>WITH DRAPES AND STAIRS</h4>
 									</div>
 								</div> </a>
 							</li>
 							<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-stage" >
-								<a class="colorbox" href="images/Dummy.jpg">
-								<div class="project-box">
-									<img src="images/Dummy.jpg" class="img-responsive" alt="gallery" />
+								<a class="colorbox" href="images/dp1.jpg" data-group="stage">
+								<div class="project-box"> 
+									<img src="images/dp1t.jpg" class="img-responsive" alt="gallery" />
 									<div class="project-overlay">
-										<h5>IMAGE</h5>
+										<h5>STAGE, TRUSS, LIGHTS</h5>
 										<hr />
-										<h4>PLACE HOLDER</h4>
-									</div>
-									<div class="text-center">
-										Ultra short throw projector
+										<h4>SELF CONTAINED</h4>
 									</div>
 								</div> </a>
 							</li>
 							<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-stage" >
-								<a class="colorbox" href="images/Dummy.jpg">
+								<a class="colorbox" href="images/dp4.jpg" data-group="stage">
 								<div class="project-box">
-									<img src="images/Dummy.jpg" class="img-responsive" alt="gallery" />
+									<img src="images/dp4t.jpg" class="img-responsive" alt="gallery" />
 									<div class="project-overlay">
-										<h5>IMAGE</h5>
+										<h5>STEEL STAGE DECKING</h5>
 										<hr />
-										<h4>PLACE HOLDER</h4>
+										<h4>ALMOST ANY SIZE</h4>
 									</div>
 								</div> </a>
 							</li>
 							<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-stage" >
-								<a class="colorbox" href="images/Dummy.jpeg">
+								<a class="colorbox" href="images/dp2.jpg" data-group="stage">
 								<div class="project-box">
-									<img src="images/Dummy.jpg" class="img-responsive" alt="gallery" />
+									<img src="images/dp2t.jpg" class="img-responsive" alt="gallery" />
 									<div class="project-overlay">
-										<h5>IMAGE</h5>
+										<h5>PIPES AND DRAPES</h5>
 										<hr />
-										<h4>PLACE HOLDER</h4>
+										<h4>FOR BOOTHS AND TABLES</h4>
 									</div>
 								</div> </a>
 							</li>
@@ -985,7 +1022,7 @@
 								</div>
 								<div class="col-md-4 contact_right">
 									<p>
-										Please contact us with any questions, to schedule rentals, bids, sales, deliveries...
+										Please contact us with any questions, to schedule rentals, bids, sales, deliveries, installation, service and / or maintenance...
 									</p>
 									<p><img src="images/location.png" alt="icon 1" /> Seattle, Washington USA
 									</p>
