Almost final edits for protosite

--- a/index.html
+++ b/index.html
@@ -430,7 +430,9 @@
 									<a class="btn btn-orange" href="#staging" role="button">INFORMATION</a>
 								</div>
 								<div class="clearfix"></div>
-								<p class="rentals_sales_text">We have drapes, pipes, tables, booths in just about any configuration conceivable. From sinple stage drapes to your next comic-con, we'll keep you in shrouds.</p>
+								<p class="rentals_sales_text">
+									We have drapes, pipes, tables, booths in just about any configuration conceivable. From sinple stage drapes to your next comic-con, we'll keep you in shrouds.
+								</p>
 							</li>
 						</ul>
 					</div><!-- End Rentals Sales Post 6 -->
@@ -468,9 +470,9 @@
 								<h4>20000 ANSI Lumens. HD 1080p. Long throw, up to 100 feet wide</h4>
 							</div>
 						</div> </a>
-						<p>
+						<div align="left">
 							20000 ANSI Lumens
-						</p>
+						</div>
 					</li>
 					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-projectors" >
 						<a class="colorbox" href="images/p2f.jpg" data-group="projectors">
@@ -482,9 +484,9 @@
 								<h4>10000 ANSI Lumens. HD 1080p. Long throw up to 45 feet wide.</h4>
 							</div>
 						</div> </a>
-						<p>
+						<div align="left">
 							10000 ANSI Lumens
-						</p>
+						</div>
 					</li>
 					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-projectors" >
 						<a class="colorbox" href="images/p3f.jpg" data-group="projectors">
@@ -496,9 +498,9 @@
 								<h4>8000 ANSI Lumens. HD 1080p. Long throw up to 30 feet wide.</h4>
 							</div>
 						</div> </a>
-						<p>
+						<div align="left">
 							8000 ANSI Lumens
-						</p>
+						</div>
 					</li>
 					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-projectors" >
 						<a class="colorbox" href="images/p5f.jpg" data-group="projectors">
@@ -510,9 +512,9 @@
 								<h4>5000 ANSI Lumens. HD 1080p. Long throw up to 20 feet wide.</h4>
 							</div>
 						</div> </a>
-						<p>
+						<div align="left">
 							5000 ANSI Lumens
-						</p>
+						</div>
 					</li>
 					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-projectors" >
 						<a class="colorbox" href="images/p4f.jpg" data-group="projectors">
@@ -524,9 +526,9 @@
 								<h4>4500 ANSI Lumens. HD 1080p. Short throw up to 15 feet wide</h4>
 							</div>
 						</div> </a>
-						<p>
+						<div align="left">
 							4500 ANSI Lumens
-						</p>
+						</div>
 					</li>
 				</ul><!-- End Gallery -->
 
@@ -563,9 +565,9 @@
 								<h4>WITH CONTROLLERS</h4>
 							</div>
 						</div> </a>
-						<p>
+						<div align="left">
 							Par 64's, Bars & Controllers
-						</p>
+						</div>
 					</li>
 					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-lighting">
 						<a class="colorbox" href="images/pr5.jpg" data-group="lighting">
@@ -577,9 +579,9 @@
 								<h4>ALL SIZES AND COLORS</h4>
 							</div>
 						</div> </a>
-						<p>
+						<div align="left">
 							Hanging LED Par 36
-						</p>
+						</div>
 					</li>
 					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-lighting">
 						<a class="colorbox" href="images/pr3.jpg" data-group="lighting">
@@ -591,9 +593,9 @@
 								<h4>ALL COLORS AND SIZES</h4>
 							</div>
 						</div> </a>
-						<p>
+						<div align="left">
 							Floor standing Par 36 up light
-						</p>
+						</div>
 					</li>
 					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-lighting">
 						<a class="colorbox" href="images/pr2.png" data-group="lighting">
@@ -605,9 +607,9 @@
 								<h4>LIGHTS</h4>
 							</div>
 						</div> </a>
-						<p>
+						<div align="left">
 							Customized packages
-						</p>
+						</div>
 					</li>
 					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-lighting">
 						<a class="colorbox" href="images/pr1.jpg" data-group="lighting">
@@ -619,9 +621,9 @@
 								<h4>PROJECTION LIGHTS</h4>
 							</div>
 						</div> </a>
-						<p>
+						<div align="left">
 							GOBO Light Projection
-						</p>
+						</div>
 					</li>
 				</ul>
 			</div>
@@ -656,6 +658,9 @@
 								<h4>VIDEO DISPLAY</h4>
 							</div>
 						</div> </a>
+						<div align="left">
+							Floor standing video walls
+						</div>
 					</li>
 
 					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-video" >
@@ -668,6 +673,9 @@
 								<h4>VIDEO SCREEN MOUNTS</h4>
 							</div>
 						</div> </a>
+						<div align="left">
+							Floor standing video frames
+						</div>
 					</li>
 
 					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-video" >
@@ -680,6 +688,9 @@
 								<h4>VIDEO MONITORS</h4>
 							</div>
 						</div> </a>
+						<div align="left">
+							Floor and Console monitors
+						</div>
 					</li>
 					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-video" >
 						<a class="colorbox" href="images/vi1.jpg" data-group="video-screens">
@@ -691,6 +702,9 @@
 								<h4>VIDEO MONITORS</h4>
 							</div>
 						</div> </a>
+						<div align="left">
+							Rack mounted video monitors
+						</div>
 					</li>
 					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-video" >
 						<a class="colorbox" href="images/vi4.jpg" data-group="video-screens">
@@ -702,6 +716,9 @@
 								<h4>VIDEO MONITORS</h4>
 							</div>
 						</div> </a>
+						<div align="left">
+							Table-top video monitors
+						</div>
 					</li>
 				</ul>
 			</div>
@@ -736,7 +753,11 @@
 									<hr />
 									<h4>SOUND BOARDS</h4>
 								</div>
-							</div> </a>
+							</div></a>
+							<div align="left">
+								Mixing consoles
+							</div>
+							<
 						</li>
 						<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-sound" >
 							<a class="colorbox" href="images/s4.jpg" data-group="sound">
@@ -748,6 +769,9 @@
 									<h4>SOUND SYSTEM</h4>
 								</div>
 							</div> </a>
+							<div align="left">
+								Club systems
+							</div>
 						</li>
 						<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-sound" >
 							<a class="colorbox" href="images/s1.jpg" data-group="sound">
@@ -759,6 +783,9 @@
 									<h4>PA SYSTEM</h4>
 								</div>
 							</div> </a>
+							<div align="left">
+								Public adress systems
+							</div>
 						</li>
 						<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-sound" >
 							<a class="colorbox" href="images/s3.jpg" data-group="sound">
@@ -770,6 +797,9 @@
 									<h4>SOUND SYSTEM</h4>
 								</div>
 							</div> </a>
+							<div align="left">
+								Live sound systems
+							</div>
 						</li>
 						<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-sound" >
 							<a class="colorbox" href="images/s6.jpg" data-group="sound">
@@ -781,6 +811,9 @@
 									<h4>EDITING WORKSTATION</h4>
 								</div>
 							</div> </a>
+								<div align="left">
+								Mobile recording workstations
+							</div>
 						</li>
 					</ul>
 				</div>
@@ -816,6 +849,8 @@
 										<h4>STAGE / EVENT DESIGN</h4>
 									</div>
 								</div> </a>
+								<div align="left">3D software planning tools
+							</div>
 							</li>
 							<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-stage" >
 								<a class="colorbox" href="images/dp3.jpg" data-group="stage">
@@ -827,10 +862,13 @@
 										<h4>WITH DRAPES AND STAIRS</h4>
 									</div>
 								</div> </a>
+							<div align="left">
+								Staging, catwalks, drapes
+							</div>
 							</li>
 							<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-stage" >
 								<a class="colorbox" href="images/dp1.jpg" data-group="stage">
-								<div class="project-box"> 
+								<div class="project-box">
 									<img src="images/dp1t.jpg" class="img-responsive" alt="gallery" />
 									<div class="project-overlay">
 										<h5>STAGE, TRUSS, LIGHTS</h5>
@@ -838,6 +876,9 @@
 										<h4>SELF CONTAINED</h4>
 									</div>
 								</div> </a>
+							<div align="left">
+								Live performance package
+							</div>
 							</li>
 							<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-stage" >
 								<a class="colorbox" href="images/dp4.jpg" data-group="stage">
@@ -849,6 +890,8 @@
 										<h4>ALMOST ANY SIZE</h4>
 									</div>
 								</div> </a>
+									<div align="left">Steel decking and staging
+							</div>
 							</li>
 							<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-stage" >
 								<a class="colorbox" href="images/dp2.jpg" data-group="stage">
@@ -860,6 +903,8 @@
 										<h4>FOR BOOTHS AND TABLES</h4>
 									</div>
 								</div> </a>
+									<div align="left">Pipes, drapes, booths
+							</div>
 							</li>
 						</ul>
 					</div>
@@ -884,7 +929,7 @@
 							</div>
 							<ul class="project-gallery" >
 								<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-graphic" >
-									<a class="colorbox" href="images/av0.jpg">
+									<a class="colorbox" href="images/av0.jpg" data-group="gallery">
 									<div class="project-box">
 										<img src="images/avt0.jpg" class="img-responsive" alt="gallery" />
 										<div class="project-overlay">
@@ -895,7 +940,7 @@
 									</div> </a>
 								</li>
 								<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-creative" >
-									<a class="colorbox" href="images/av1.jpg">
+									<a class="colorbox" href="images/av1.jpg" data-group="gallery">
 									<div class="project-box">
 										<img src="images/avt1.jpg" class="img-responsive" alt="gallery" />
 										<div class="project-overlay">
@@ -906,7 +951,7 @@
 									</div> </a>
 								</li>
 								<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-inspiration" >
-									<a class="colorbox" href="images/av2.jpg">
+									<a class="colorbox" href="images/av2.jpg" data-group="gallery">
 									<div class="project-box">
 										<img src="images/avt2.jpg" class="img-responsive" alt="gallery" />
 										<div class="project-overlay">
@@ -917,7 +962,7 @@
 									</div> </a>
 								</li>
 								<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-design" >
-									<a class="colorbox" href="images/av3.jpg">
+									<a class="colorbox" href="images/av3.jpg" data-group="gallery">
 									<div class="project-box">
 										<img src="images/avt3.jpg" class="img-responsive" alt="gallery" />
 										<div class="project-overlay">
@@ -928,7 +973,7 @@
 									</div> </a>
 								</li>
 								<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-inspiration" >
-									<a class="colorbox" href="images/av4.jpg">
+									<a class="colorbox" href="images/av4.jpg" data-group="gallery">
 									<div class="project-box">
 										<img src="images/avt4.jpg" class="img-responsive" alt="gallery" />
 										<div class="project-overlay">
@@ -939,7 +984,7 @@
 									</div> </a>
 								</li>
 								<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-inspiration" >
-									<a class="colorbox" href="images/av5.jpg">
+									<a class="colorbox" href="images/av5.jpg" data-group="gallery">
 									<div class="project-box">
 										<img src="images/avt5.jpg" class="img-responsive" alt="gallery" />
 										<div class="project-overlay">
@@ -951,7 +996,7 @@
 								</li>
 
 								<li class="col-lg-2 col-md-2 col-sm-2 gallery gallery-design" >
-									<a class="colorbox" href="images/av6.jpg">
+									<a class="colorbox" href="images/av6.jpg" data-group="gallery">
 									<div class="project-box">
 										<img src="images/avt6.jpg" class="img-responsive" alt="gallery" />
 										<div class="project-overlay">
@@ -963,7 +1008,7 @@
 								</li>
 
 								<li class="col-lg-2 col-md-2 col-sm-2 gallery gallery-creative" >
-									<a class="colorbox" href="images/av9.jpg">
+									<a class="colorbox" href="images/av9.jpg" data-group="gallery">
 									<div class="project-box">
 										<img src="images/avt9.jpg" class="img-responsive" alt="gallery" />
 										<div class="project-overlay">
@@ -975,7 +1020,7 @@
 								</li>
 
 								<li class="col-lg-2 col-md-2 col-sm-2 gallery gallery-graphic" >
-									<a class="colorbox" href="images/av12.jpg">
+									<a class="colorbox" href="images/av12.jpg" data-group="gallery">
 									<div class="project-box">
 										<img src="images/avt12.jpg" class="img-responsive" alt="gallery" />
 										<div class="project-overlay">
@@ -987,7 +1032,7 @@
 								</li>
 
 								<li class="col-lg-2 col-md-2 col-sm-2 gallery gallery-inspiration" >
-									<a class="colorbox" href="images/av14.jpg">
+									<a class="colorbox" href="images/av14.jpg" data-group="gallery">
 									<div class="project-box">
 										<img src="images/avt14.jpg" class="img-responsive" alt="gallery" />
 										<div class="project-overlay">
